--- a/Antirrhinum Phase 1 Script.ipynb
+++ b/Antirrhinum Phase 1 Script.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +260,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -315,12 +315,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr. of NaNs in corrected: 1466\n",
       "Nr. of NaNs in uncorrected: 1792\n",
+      "Nr. of NaNs in corrected: 1466\n",
       "Nr. of NaNs in both: 1466\n",
       "Nr. Entries where GPS Entries are different: 25690 out of 25821\n",
       "Nr. of Entries with manual positon update:  404 out of 25821\n",
-      "Nr. of Entries with Death or Label Only:  3225 out of 25821\n"
+      "Nr. of Entries with Death or Label Only:  3225 out of 25821\n",
+      "20911\n",
+      "20817.0\n",
+      "0    1.0\n",
+      "1    1.0\n",
+      "2    1.0\n",
+      "3    1.0\n",
+      "4    1.0\n",
+      "5    1.0\n",
+      "6    1.0\n",
+      "7    1.0\n",
+      "8    1.0\n",
+      "9    1.0\n",
+      "Name: ThisYearLabel, dtype: float64\n",
+      "17354    S4759\n",
+      "17378    S4649\n",
+      "17386    S4651\n",
+      "17390    S4647\n",
+      "17407    S4641\n",
+      "17418    S4643\n",
+      "17419    S4644\n",
+      "17420    S4370\n",
+      "17421    S4371\n",
+      "17425    S4648\n",
+      "17432    S4366\n",
+      "17434    S4367\n",
+      "17436    S4642\n",
+      "17437    S4646\n",
+      "17438    S4653\n",
+      "17441    S4604\n",
+      "17445    S4652\n",
+      "17446    S4630\n",
+      "17460    S4637\n",
+      "17461    S4652\n",
+      "17464    S4622\n",
+      "17491    S4607\n",
+      "17493    S4603\n",
+      "17494    S4619\n",
+      "17495    S4608\n",
+      "17501    S4738\n",
+      "17510    S4634\n",
+      "17511    S4624\n",
+      "17518    S4629\n",
+      "17521    S4628\n",
+      "         ...  \n",
+      "25189    S4529\n",
+      "25190    S4589\n",
+      "25191    S4596\n",
+      "25192    S4587\n",
+      "25193    S4591\n",
+      "25194    S4596\n",
+      "25195    S4537\n",
+      "25196    S4600\n",
+      "25197    S4588\n",
+      "25198    S4599\n",
+      "25199    S4535\n",
+      "25200    S4538\n",
+      "25201    S4539\n",
+      "25202    S4521\n",
+      "25203    S4590\n",
+      "25204    S4582\n",
+      "25205    S4522\n",
+      "25206    S4531\n",
+      "25207    S4532\n",
+      "25208    S4585\n",
+      "25209    S4540\n",
+      "25210    S4526\n",
+      "25211    S4533\n",
+      "25212    S4524\n",
+      "25213    S4528\n",
+      "25214    S4525\n",
+      "25215    S4534\n",
+      "25216    S4536\n",
+      "25217    S4530\n",
+      "25218    S4523\n",
+      "Name: PlantID, dtype: object\n"
      ]
     }
    ],
@@ -334,15 +409,16 @@
     "nan_corr = corr_df.isnull().any(axis=1)   # Get all indices were at least one entry is not 0.\n",
     "nan_uncorr = un_corr_df.isnull().any(axis=1)   # Get all indices were at least one entry is not 0.\n",
     "\n",
-    "# Give some Output\n",
-    "print(\"Nr. of NaNs in corrected: %i\" % np.sum(list(nan_corr)))\n",
-    "print(\"Nr. of NaNs in uncorrected: %i\" % np.sum(list(nan_uncorr)))\n",
-    "print(\"Nr. of NaNs in both: %i\" % np.sum(list(both_zero)))\n",
-    "\n",
     "# Some logical magic to find out where one entry is \n",
     "both_nan = nan_corr & nan_uncorr\n",
     "one_nan = ~nan_corr & nan_uncorr   # Corrected Value is not NaN, but uncorrected is!\n",
     "non_nan = ~nan_corr & ~nan_uncorr  # Both are not NaN\n",
+    "\n",
+    "\n",
+    "# Give some Output\n",
+    "print(\"Nr. of NaNs in uncorrected: %i\" % np.sum(list(nan_uncorr)))\n",
+    "print(\"Nr. of NaNs in corrected: %i\" % np.sum(list(nan_corr)))\n",
+    "print(\"Nr. of NaNs in both: %i\" % np.sum(list(both_nan)))\n",
     "\n",
     "# Extract where the two Position-Frames differ:\n",
     "diff_pos = (un_corr_df.values != corr_df.values).any(axis=1)  # Numpy Array where GPS positions different\n",
@@ -360,6 +436,33 @@
     "plant_stat_wrong = (all_data.Alive == \"Label only\") | (all_data.Alive == \"Dead\")\n",
     "print(\"Nr. of Entries with Death or Label Only:  %i out of %i\" % (np.sum(list(plant_stat_wrong)), corr_df.shape[0]))\n",
     "\n",
+    "# Do the classification per year\n",
+    "first_chars = plant_ID.str[0].values # First Character for every year\n",
+    "years = all_data.year.values      # Year \n",
+    "#print(set(first_char))  # The C comes from Cadi\n",
+    "#print(set(year))        # The year\n",
+    "\n",
+    "char = ['J', 'K'  , 'L' ,'M' , 'P', 'S', 'C']  # Start with creating a dictionary:\n",
+    "year = [2009, 2010, 2011, 2012, 2013, 2014, 2014]\n",
+    "d = dict(zip(char, year))\n",
+    "\n",
+    "transf_year = np.array([d[i] for i in first_chars])  # Put first chars through dictionary\n",
+    "\n",
+    "same_year = (transf_year == years)\n",
+    "same_year[first_chars=='C']= 1  # Set all Cadi Plants to this year\n",
+    "\n",
+    "print(np.sum(same_year))\n",
+    "print(np.sum(all_data.ThisYearLabel))\n",
+    "\n",
+    "print(all_data.ThisYearLabel[:10])\n",
+    "\n",
+    "diff = (same_year != all_data.ThisYearLabel.values)\n",
+    "print(all_data.loc[diff,'PlantID']) # Print Differences between inferred difference and ThisYearLabel.values\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "############################ Actually set the entries\n",
     "#print(np.sum(list(one_nan)))\n",
     "all_data.loc[both_nan,'Track_Score'] = 0  # Set the lowest Score\n",
     "all_data.loc[one_nan,'Track_Score'] = 1   # Set Score = 1: Corrected is not NaN, but Uncorrected is!\n",
@@ -369,9 +472,7 @@
     "all_data.loc[manual_updater, 'Track_Score'] = 1 # Set all entries where there was an manual Updater to 1.\n",
     "all_data.loc[plant_stat_wrong, 'Track_Score'] = 0 # Set all entrie where the plant status is wrong to 0.\n",
     "\n",
-    "all_data.to_csv(output_folder + output_file_name, sep = '$')\n",
-    "\n",
-    "#Print"
+    "all_data.to_csv(output_folder + output_file_name, sep = '$')"
    ]
   },
   {
@@ -421,6 +522,90 @@
    "source": [
     "## Test Area\n",
     "Created to play around with and try out stuff."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        J\n",
+       "1        J\n",
+       "2        J\n",
+       "3        J\n",
+       "4        J\n",
+       "5        J\n",
+       "6        J\n",
+       "7        J\n",
+       "8        J\n",
+       "9        J\n",
+       "10       J\n",
+       "11       J\n",
+       "12       J\n",
+       "13       J\n",
+       "14       J\n",
+       "15       J\n",
+       "16       J\n",
+       "17       J\n",
+       "18       J\n",
+       "19       J\n",
+       "20       J\n",
+       "21       J\n",
+       "22       J\n",
+       "23       J\n",
+       "24       J\n",
+       "25       J\n",
+       "26       J\n",
+       "27       J\n",
+       "28       J\n",
+       "29       J\n",
+       "        ..\n",
+       "25791    P\n",
+       "25792    P\n",
+       "25793    P\n",
+       "25794    P\n",
+       "25795    P\n",
+       "25796    P\n",
+       "25797    P\n",
+       "25798    P\n",
+       "25799    P\n",
+       "25800    P\n",
+       "25801    P\n",
+       "25802    P\n",
+       "25803    P\n",
+       "25804    P\n",
+       "25805    P\n",
+       "25806    P\n",
+       "25807    P\n",
+       "25808    P\n",
+       "25809    P\n",
+       "25810    P\n",
+       "25811    P\n",
+       "25812    P\n",
+       "25813    P\n",
+       "25814    P\n",
+       "25815    P\n",
+       "25816    P\n",
+       "25817    P\n",
+       "25818    P\n",
+       "25819    P\n",
+       "25820    P\n",
+       "Name: PlantID, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plant_ID=all_data.PlantID\n",
+    "plant_ID.str[0]"
    ]
   },
   {
@@ -597,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -605,77 +790,18 @@
     {
      "data": {
       "text/plain": [
-       "0        NaN\n",
-       "1        NaN\n",
-       "2        NaN\n",
-       "3        NaN\n",
-       "4        NaN\n",
-       "5        NaN\n",
-       "6        NaN\n",
-       "7        NaN\n",
-       "8        NaN\n",
-       "9        NaN\n",
-       "10       NaN\n",
-       "11       NaN\n",
-       "12       NaN\n",
-       "13       NaN\n",
-       "14       NaN\n",
-       "15       NaN\n",
-       "16       NaN\n",
-       "17       NaN\n",
-       "18       NaN\n",
-       "19       NaN\n",
-       "20       NaN\n",
-       "21       NaN\n",
-       "22       NaN\n",
-       "23       NaN\n",
-       "24       NaN\n",
-       "25       NaN\n",
-       "26       NaN\n",
-       "27       NaN\n",
-       "28       NaN\n",
-       "29       NaN\n",
-       "        ... \n",
-       "25791    NaN\n",
-       "25792    NaN\n",
-       "25793    NaN\n",
-       "25794    NaN\n",
-       "25795    NaN\n",
-       "25796    NaN\n",
-       "25797    NaN\n",
-       "25798    NaN\n",
-       "25799    NaN\n",
-       "25800    NaN\n",
-       "25801    NaN\n",
-       "25802    NaN\n",
-       "25803    NaN\n",
-       "25804    NaN\n",
-       "25805    NaN\n",
-       "25806    NaN\n",
-       "25807    NaN\n",
-       "25808    NaN\n",
-       "25809    NaN\n",
-       "25810    NaN\n",
-       "25811    NaN\n",
-       "25812    NaN\n",
-       "25813    NaN\n",
-       "25814    NaN\n",
-       "25815    NaN\n",
-       "25816    NaN\n",
-       "25817    NaN\n",
-       "25818    NaN\n",
-       "25819    NaN\n",
-       "25820    NaN\n",
-       "Name: LocationManualUpdater, dtype: object"
+       "array([ True,  True, False], dtype=bool)"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_data.LocationManualUpdater"
+    "a = np.array([1,2,3])\n",
+    "b = np.array([1,2,4])\n",
+    "a == b"
    ]
   },
   {
