--- a/Antirrhinum Phase 1 Script.ipynb
+++ b/Antirrhinum Phase 1 Script.ipynb
@@ -799,7 +799,7 @@
     "a = np.array([1,2,3])\n",
     "b = np.array([1,2,4])\n",
     "a == b\n",
-    "print(\"Test\")"
+    "print(\"Test1\")"
    ]
   },
   {
