--- a/Antirrhinum Phase 1 Script.ipynb
+++ b/Antirrhinum Phase 1 Script.ipynb
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -791,7 +791,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test\n"
+      "Test2\n"
      ]
     }
    ],
@@ -799,7 +799,7 @@
     "a = np.array([1,2,3])\n",
     "b = np.array([1,2,4])\n",
     "a == b\n",
-    "print(\"Test1\")"
+    "print(\"Test2\")"
    ]
   },
   {
