--- a/Antirrhinum Phase 1 Script.ipynb
+++ b/Antirrhinum Phase 1 Script.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +260,7 @@
        "[3 rows x 27 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -321,81 +321,9 @@
       "Nr. Entries where GPS Entries are different: 25690 out of 25821\n",
       "Nr. of Entries with manual positon update:  404 out of 25821\n",
       "Nr. of Entries with Death or Label Only:  3225 out of 25821\n",
-      "20911\n",
-      "20817.0\n",
-      "0    1.0\n",
-      "1    1.0\n",
-      "2    1.0\n",
-      "3    1.0\n",
-      "4    1.0\n",
-      "5    1.0\n",
-      "6    1.0\n",
-      "7    1.0\n",
-      "8    1.0\n",
-      "9    1.0\n",
-      "Name: ThisYearLabel, dtype: float64\n",
-      "17354    S4759\n",
-      "17378    S4649\n",
-      "17386    S4651\n",
-      "17390    S4647\n",
-      "17407    S4641\n",
-      "17418    S4643\n",
-      "17419    S4644\n",
-      "17420    S4370\n",
-      "17421    S4371\n",
-      "17425    S4648\n",
-      "17432    S4366\n",
-      "17434    S4367\n",
-      "17436    S4642\n",
-      "17437    S4646\n",
-      "17438    S4653\n",
-      "17441    S4604\n",
-      "17445    S4652\n",
-      "17446    S4630\n",
-      "17460    S4637\n",
-      "17461    S4652\n",
-      "17464    S4622\n",
-      "17491    S4607\n",
-      "17493    S4603\n",
-      "17494    S4619\n",
-      "17495    S4608\n",
-      "17501    S4738\n",
-      "17510    S4634\n",
-      "17511    S4624\n",
-      "17518    S4629\n",
-      "17521    S4628\n",
-      "         ...  \n",
-      "25189    S4529\n",
-      "25190    S4589\n",
-      "25191    S4596\n",
-      "25192    S4587\n",
-      "25193    S4591\n",
-      "25194    S4596\n",
-      "25195    S4537\n",
-      "25196    S4600\n",
-      "25197    S4588\n",
-      "25198    S4599\n",
-      "25199    S4535\n",
-      "25200    S4538\n",
-      "25201    S4539\n",
-      "25202    S4521\n",
-      "25203    S4590\n",
-      "25204    S4582\n",
-      "25205    S4522\n",
-      "25206    S4531\n",
-      "25207    S4532\n",
-      "25208    S4585\n",
-      "25209    S4540\n",
-      "25210    S4526\n",
-      "25211    S4533\n",
-      "25212    S4524\n",
-      "25213    S4528\n",
-      "25214    S4525\n",
-      "25215    S4534\n",
-      "25216    S4536\n",
-      "25217    S4530\n",
-      "25218    S4523\n",
-      "Name: PlantID, dtype: object\n"
+      "\n",
+      "Plants from the same year 20911:\n",
+      "Plants from the same year according to label: 20817\n"
      ]
     }
    ],
@@ -437,7 +365,7 @@
     "print(\"Nr. of Entries with Death or Label Only:  %i out of %i\" % (np.sum(list(plant_stat_wrong)), corr_df.shape[0]))\n",
     "\n",
     "# Do the classification per year\n",
-    "first_chars = plant_ID.str[0].values # First Character for every year\n",
+    "first_chars = all_data.PlantID.str[0].values # First Character for every year\n",
     "years = all_data.year.values      # Year \n",
     "#print(set(first_char))  # The C comes from Cadi\n",
     "#print(set(year))        # The year\n",
@@ -451,13 +379,11 @@
     "same_year = (transf_year == years)\n",
     "same_year[first_chars=='C']= 1  # Set all Cadi Plants to this year\n",
     "\n",
-    "print(np.sum(same_year))\n",
-    "print(np.sum(all_data.ThisYearLabel))\n",
-    "\n",
-    "print(all_data.ThisYearLabel[:10])\n",
+    "print(\"\\nPlants from the same year %i:\" %np.sum(same_year))\n",
+    "print(\"Plants from the same year according to label: %i\" %np.sum(all_data.ThisYearLabel))\n",
     "\n",
     "diff = (same_year != all_data.ThisYearLabel.values)\n",
-    "print(all_data.loc[diff,'PlantID']) # Print Differences between inferred difference and ThisYearLabel.values\n",
+    "#print(all_data.loc[diff,'PlantID']) # Print Differences between inferred difference and ThisYearLabel.values\n",
     "\n",
     "\n",
     "\n",
@@ -479,12 +405,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2 of Phase 1."
+    "## Step 2 of Phase 1.\n",
+    "Here we will do a script for the ID Track decision."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -494,16 +421,144 @@
      "output_type": "stream",
      "text": [
       "Successfully loaded\n",
-      "Shape of Data: \n"
+      "Shape of Data: \n",
+      "(25821, 29)\n",
+      "J1548    8\n",
+      "L1359    8\n",
+      "J1251    8\n",
+      "P0056    8\n",
+      "M0121    7\n",
+      "Name: PlantID, dtype: int64\n",
+      "Nr of unique Labels: 18215\n",
+      "Nr of total Labels: 25821\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PlantID</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Altitude</th>\n",
+       "      <th>ID_Track Decision</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CADI0001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CADI0002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CADI0003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CADI0004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CADI0005</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>CADI0006</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CADI0007</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>CADI0008</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CADI0009</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>CADI0010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(25821, 29)"
+       "    PlantID  Latitude  Longitude  Altitude ID_Track Decision  Score\n",
+       "0  CADI0001         0          0         0              None    -10\n",
+       "1  CADI0002         0          0         0              None    -10\n",
+       "2  CADI0003         0          0         0              None    -10\n",
+       "3  CADI0004         0          0         0              None    -10\n",
+       "4  CADI0005         0          0         0              None    -10\n",
+       "5  CADI0006         0          0         0              None    -10\n",
+       "6  CADI0007         0          0         0              None    -10\n",
+       "7  CADI0008         0          0         0              None    -10\n",
+       "8  CADI0009         0          0         0              None    -10\n",
+       "9  CADI0010         0          0         0              None    -10"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +568,175 @@
     "df = pd.read_csv(output_folder + output_file_name, sep=\"$\")     # Create Panda Data Frame\n",
     "print(\"Successfully loaded\")\n",
     "print(\"Shape of Data: \")\n",
-    "df.shape"
+    "print(df.shape)\n",
+    "\n",
+    "# First do some statistics to get an overview over the Problem:\n",
+    "counts=df['PlantID'].value_counts()\n",
+    "max_counts = max(counts)\n",
+    "print(counts[:5])\n",
+    "bins = np.arange(-0.5,max_counts+0.5,1)\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.hist(counts, bins=bins)\n",
+    "plt.xlim([0,max_counts+1])\n",
+    "plt.xlabel(\"Nr of Appearance of Label\")\n",
+    "#plt.show()\n",
+    "\n",
+    "# Now extract unique ID-Labels:\n",
+    "unique_labels=df.PlantID.unique()\n",
+    "unique_labels=np.sort(unique_labels)   # Sort; so that everything is easy to find.\n",
+    "print(\"Nr of unique Labels: %i\" % len(unique_labels))\n",
+    "print(\"Nr of total Labels: %i\" % len(df))\n",
+    "\n",
+    "# Create a Data Frame; every unique Label\n",
+    "dic={'PlantID': unique_labels, 'Latitude': 0, 'Longitude': 0, 'Altitude': 0, 'ID_Track Decision': 'None', 'Score': -10}\n",
+    "# At the end; there should be no -10 at the Score Column!!\n",
+    "final_decision = pd.DataFrame(dic, columns=['PlantID','Latitude','Longitude','Altitude','ID_Track Decision',  'Score'])\n",
+    "final_decision.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1571     False\n",
+      "2514      True\n",
+      "2515     False\n",
+      "5175     False\n",
+      "7697     False\n",
+      "7698     False\n",
+      "11527     True\n",
+      "25653     True\n",
+      "dtype: bool\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CorrectedLatitude</th>\n",
+       "      <th>CorrectedLongitude</th>\n",
+       "      <th>CorrectedAltitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1571</th>\n",
+       "      <td>42.323150</td>\n",
+       "      <td>2.076300</td>\n",
+       "      <td>1147.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2514</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2515</th>\n",
+       "      <td>42.322972</td>\n",
+       "      <td>2.075709</td>\n",
+       "      <td>1142.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5175</th>\n",
+       "      <td>42.322952</td>\n",
+       "      <td>2.075704</td>\n",
+       "      <td>1141.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7697</th>\n",
+       "      <td>42.322938</td>\n",
+       "      <td>2.075665</td>\n",
+       "      <td>1142.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7698</th>\n",
+       "      <td>42.322955</td>\n",
+       "      <td>2.075683</td>\n",
+       "      <td>1144.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11527</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25653</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CorrectedLatitude  CorrectedLongitude  CorrectedAltitude\n",
+       "1571           42.323150            2.076300            1147.00\n",
+       "2514                 NaN                 NaN                NaN\n",
+       "2515           42.322972            2.075709            1142.41\n",
+       "5175           42.322952            2.075704            1141.62\n",
+       "7697           42.322938            2.075665            1142.63\n",
+       "7698           42.322955            2.075683            1144.07\n",
+       "11527                NaN                 NaN                NaN\n",
+       "25653                NaN                 NaN                NaN"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Now write functions to set the various Values of the Data Frame:\n",
+    "# Whole date frame is df\n",
+    "def set_score(plantID):\n",
+    "    '''Function to set the score for plant ID'''\n",
+    "    lookup_list = df.PlantID.values   # Define the lookup List\n",
+    "    assert(isinstance(plantID, str))  # To make sure plantID is actually String\n",
+    "    rel_indices = np.where(lookup_list == plantID)[0]\n",
+    "    \n",
+    "    if len(rel_indices) == 0:        # In case Index is not there:\n",
+    "        print(\"Index not found!!\")\n",
+    "        print(\"Put all your shit in bag. But get it together!\")\n",
+    "        return\n",
+    "    \n",
+    "    matching_plants = df.iloc[rel_indices,:]    # Where to find the plants with the right PlantID; then extract them\n",
+    "    coords_matching = matching_plants.loc[:,['CorrectedLatitude','CorrectedLongitude','CorrectedAltitude']] \n",
+    "    \n",
+    "    ############################################\n",
+    "    # Set Zero Score Plants: All GPS Entries NaN\n",
+    "    missing=coords_matching.isnull().any(axis=1)\n",
+    "    \n",
+    "    if np.sum(~missing)==0:  # If only missing Values\n",
+    "        return 0   # Return Score 0!\n",
+    "    \n",
+    "    ############################################\n",
+    "    # Set Score to One:\n",
+    "    \n",
+    "    if np.sum(~missing)\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "        \n",
+    "    print(missing)\n",
+    "    return coords_matching\n",
+    "    \n",
+    "set_score(\"J1548\")"
    ]
   },
   {
@@ -800,6 +1023,32 @@
     "b = np.array([1,2,4])\n",
     "a == b\n",
     "print(\"Test2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3    4\n",
+       "2    2\n",
+       "1    1\n",
+       "Name: Test, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = pd.DataFrame({\"Test\": [1,2,2,3,3,3,3]})\n",
+    "a[\"Test\"].value_counts()"
    ]
   },
   {
